force-app/main/default/objects/Doctor__c/Doctor__c.object-meta.xml
<CustomObject>
    <description>Maintains records of licensed healthcare providers, including licensing information and their associated clinic for prescription management.</description>
    <label>Doctor</label>
    <nameField>
        <label>Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>