force-app/main/default/objects/Doctor__c/fields/Clinic__c.field-meta.xml
<CustomField>
    <fullName>Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinic</label>
    <referenceTo>Clinic__c</referenceTo>
    <relationshipLabel>Doctors</relationshipLabel>
    <relationshipName>Doctors</relationshipName>
    <type>Lookup</type>
</CustomField>