force-app/main/default/objects/Doctor__c/fields/Doctor_Id__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Id__c</fullName>
    <label>Doctor Id</label>
    <type>AutoNumber</type>
</CustomField>