force-app/main/default/objects/Doctor__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>&quot;Dr.&quot;  &amp;  First_Name__c  &amp; &quot; &quot;  &amp;  Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>