force-app/main/default/objects/Doctor__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <inlineHelpText>Enter the license number in the format LIC-######</inlineHelpText>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>