force-app/main/default/objects/Doctor__c/validationRules/LicenseInformationCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>LicenseInformationCheck</fullName>
    <active>true</active>
    <description>Ensures that license information is provided for licensed doctors and remains blank for unlicensed doctors.</description>
    <errorConditionFormula>AND(
    Licensed__c,
    OR(
        ISBLANK(License_Number__c),
        ISBLANK(License_Expiry__c)
    )
)</errorConditionFormula>
    <errorMessage>Please fill the license information field for licensed doctors.</errorMessage>
</ValidationRule>