force-app/main/default/objects/Doctor__c/validationRules/LicenseNumberValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>LicenseNumberValidation</fullName>
    <active>true</active>
    <description>Rule to enforce standardized license format.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(License_Number__c)),
    NOT(
        REGEX(
            License_Number__c,
            &quot;LIC-[0-9]{6}&quot;
        )
    )
)</errorConditionFormula>
    <errorMessage>License Number must be in the format LIC-######. Example: LIC-403291.</errorMessage>
</ValidationRule>