force-app/main/default/objects/Doctor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>License_Number__c</columns>
    <columns>Licensed__c</columns>
    <columns>License_Expiry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>